Profile page sidebar fix and card overflow

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,17 +1,17 @@
 html {
     position: relative;
     min-height: 100%;
-  }
-  body {
+}
+body {
     /* Margin bottom by footer height */
     margin-bottom: 60px;
-  }
+}
 footer {
     position: absolute;
     bottom: 0;
     width: 100%;
     height: 60px;
-  }
+}
 #logoNBA {
     max-width: 20%;
     padding-top: 1.5em;
@@ -42,7 +42,7 @@ footer {
     font-size: 17px;
 }
 
-#teamtextLink{
+#teamtextLink {
     color: inherit;
     text-decoration: none;
 }
@@ -198,45 +198,85 @@ footer {
 
 /* end of Filter CSS*/
 
-
-@media only screen and (min-width: 992px) {
-    .navbar .navbar-nav .nav-item .nav-link {
-        padding: 0.5em 3em;
-    }
-    .navbar .navbar-nav .nav-item:not(:last-child) .nav-link {
-        border-right: 2px solid #575252;
-    }
-}
 .navbar-collapse.in {
     display: block !important;
 }
-.sidebar {
+
+/*sidebar css */
+.wrapper {
     position: fixed;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    padding: 58px 0 0; /* Height of navbar */
-    box-shadow: 0 2px 5px 0 rgb(0 0 0 / 5%), 0 2px 10px 0 rgb(0 0 0 / 5%);
-    width: 240px;
-    z-index: 600;
-    background: #212529;
 }
-@media (max-width: 991.98px) {
+.sidebar {
+    position: absolute;
+    width: 180px;
+    height: 95%;
+    background: #000000e0;
+    margin-right: 20px;
+}
+
+.text-muted {
+    color: #adb5bd !important;
+}
+
+ul {
+    padding-bottom: 20px;
+}
+
+ul li a img {
+    background: #66bb6a;
+    top: 0;
+    border: none;
+    width: 20px;
+}
+
+.sidebar ul li {
+    padding: 15px;
+}
+
+.sidebar ul li a {
+    color: #fff;
+    display: block;
+}
+
+.sidebar ul li a .fas {
+    width: 30px;
+    color: #bdb8d7 !important;
+}
+
+i.fas.fa-home:hover,
+i.fas.fa-file-invoice:hover,
+i.fas.fa-video:hover,
+i.fas.fa-id-badge:hover,
+i.fas.fa-external-link-alt:hover,
+i.fas.fa-code:hover,
+i.far.fa-calendar-alt:hover,
+i.far.fa-credit-card:hover {
+    color: #304ffe !important;
+}
+
+.sidebar ul li a .far {
+    width: 30px;
+    color: #bdb8d7 !important;
+}
+
+@media screen and (max-width: 700px) {
     .sidebar {
         width: 100%;
+        height: auto;
+        position: relative;
+    }
+    .sidebar a {
+        float: left;
+    }
+    div.content {
+        margin-left: 0;
     }
 }
-.sidebar .active {
-    border-radius: 5px;
-    box-shadow: 0 2px 5px 0 rgb(0 0 0 / 16%), 0 2px 10px 0 rgb(0 0 0 / 12%);
-}
 
-.sidebar-sticky {
-    position: relative;
-    top: 0;
-    height: calc(100vh - 48px);
-    padding-top: 0.5rem;
-    overflow-x: hidden;
-    overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
+/* On screens that are less than 400px, display the bar vertically, instead of horizontally */
+@media screen and (max-width: 400px) {
+    .sidebar a {
+        text-align: center;
+        float: none;
+    }
 }
-
